--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Realtime wheather app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js"
   },
   "author": "Amul Sharma",
   "license": "ISC",
